<resources>
    <string name="app_name">CryptoMonitor</string>
    <string name="history">History</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="exit_phrase">Press Back once again to exit</string>
    <string-array name="spinner">
        <item>USD</item>
        <item>EUR</item>
        <item>RUB</item>
        <item>CNY</item>
        <item>GBP</item>
    </string-array>
    <string-array name="settings_spinner">
        <item>Sort </item>
        <item>Settings  </item>
    </string-array>
    <string name="briefcase">Briefcase</string>
    <string name="find">Find</string>
    <string name="currency_spinner">Currency Spinner</string>
    <string name="search_line">Search</string>
    <string name="close">Close</string>
    <string name="updating">Updating</string>
    <string name="update_success">Updated successfully</string>
    <string name="updating_failed">Updating failed</string>
    <string name="buy">Buy</string>
    <string name="coin">Coin</string>
    <string name="choose_coin">Choose coin…</string>
    <string name="cost">Cost</string>
    <string name="amount">Amount</string>
    <string name="price_for_a_coin">Price for a coin</string>
    <string name="start_input">Start input</string>
    <string name="date">Date</string>
    <string name="settings">Settings</string>
    <string name="sort_by_rank">Sort by rank</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_value">Sort by value</string>
    <string name="title_activity_settings">Settings</string>
    <string name="language_header">Languages</string>
    <string name="language_title">Language</string>
    <string name="currency_header">Currency settings</string>
    <string name="theme_header">Themes</string>
    <string name="currency_title">Currency</string>
    <string name="theme_title">Set dark theme</string>
    <string name="transaction_price_in">Price in %1$s</string>
    <string name="transaction_total_cost">Total cost in %1$s</string>
    <string name="updated_at">Updated at</string>
    <string name="portfolio">Portfolio</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="check_date">Check Date</string>
    <string name="total_cost">Total cost</string>
    <string name="price">Price</string>
    <string name="sell">Sell</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="update">Update</string>

    <string name="action_bar_spinner">Action Bar Spinner</string>
    <string name="sort">Sort</string>
    <string name="action_bar_spinner">Action Bar Spinner</string>
    <string name="sort">Sort</string>
</resources>
