<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/language_header">
        <ListPreference
            app:defaultValue="Russian"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/language_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/currency_header">
        <ListPreference
            app:defaultValue="USD"
            app:entries="@array/spinner_pref"
            app:entryValues="@array/spinner_pref"
            app:key="currency"
            app:title="@string/language_title"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>
    <PreferenceCategory app:title="@string/theme_header">
        <SwitchPreferenceCompat
            app:key="theme"
            app:title="@string/theme_title" />
    </PreferenceCategory>


</androidx.preference.PreferenceScreen>
