<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="0dp"
    android:layout_height="0dp"
    tools:context=".activity.MainActivity">
    <item
        android:id="@+id/currency_spinner"
        android:title="@string/currency_spinner"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="always" />

    <item
        android:id="@+id/search"
        android:title="@string/find"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_dots_vertical"
        android:iconTint="?attr/itemIconTint"
        android:title="@string/settings"
        app:showAsAction="never" />


</menu>